src/index.css
html{
  min-height: 100vh;
}

body {
  margin: 0px;
  min-height: 100vh;
  position: relative;
  font-family: 'Raleway', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

*{
  margin: 0px;
}

.App{
  position: relative;
}

/* HIGHLIGHT COLOURS */
.h-colour-1{
  background-color: #38EFCF;
}

.h-colour-2{
  background-color: #0062AE;
}

.h-colour-3{
  background-color: #E1F2FF;
}
/* END */

nav{
  display: flex;
  color: white;
  justify-content: space-around;
  height: 8vh;
  align-items: center;
}

.nav-items{
  display: flex;
  width: 30%;
  justify-content: space-around;
}

.nav-items li{
  list-style: none;
}

a{
  text-decoration: none;
  color: #E8E8E8;
  cursor: pointer;
}

.nav-item a{
  text-transform: uppercase;
  font-weight: 600;
}

.nav-item a:hover{
  color: white;
}

.logo h1{
  font-family: 'Press Start 2P', cursive;
}

.logo h1 a{
  letter-spacing: 2px;
}

.burger{
  display: none;
}

.burger div{
  height: 3px;
  width: 25px;
  margin: 5px;
  background-color: white;
  transition: all 0.3s ease;
}

.burger:hover{
  cursor: pointer;
}

@media screen and (max-width: 1022px){
  .nav-items{
    width: 50%;
  }

}

@media screen and (max-width: 750px){
  html, body{
    overflow-x: hidden;
  }

  .nav-items{
    position: absolute;
    right: 0px;
    top: 0px;
    background-color: #008080;
    height: 100vh;
    flex-direction: column;
    align-items: center;
    transform: translateX(100%);
    transition: transform 0.5s ease-in;
    z-index:1;
  }

  .nav-items li{
    opacity: 0;
  }

  .burger{
    display: block;
    z-index: 1;
  }

}

.nav-active{
  transform: translateX(0%)
}

.toggle-burger .line1{
  transform: rotate(-45deg) translate(-5px,6px);
}

.toggle-burger .line2{
  opacity: 0
}

.toggle-burger .line3{
  transform: rotate(45deg) translate(-5px,-6px);
}

.rule{
  height: 4px;
  width: 50px;
  margin: 3px auto 0px auto;
}

#home{
  height: 100vh;
  width: 100%;
  background-image: linear-gradient(to bottom right, #38EFCF, #0062AE);
  color: white;
  position: relative;
}

.banner{
  width: 100%;
  position: relative;
  top: 0px;
  height: 100%;
  background-color: rgba(52, 222, 235, 0.5);
  text-align: center;
  overflow: hidden;
}

.banner h1{
  font-size: 5rem;
  text-transform: uppercase;
}

.slogan{
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%,-50%);
  width: 90%;
}

.slogan > p{
  text-align: center;
  font-size: 3.3rem;
}

.slogan > p + p{
  margin-top: 16px;
}


/* ANIMATIONS */

@keyframes navItemFade{
  from{
    opacity: 0;
    transform: translateX(50px);
  }

  to{
    opacity: 1;
    transform: translateX(0px);
  }
}

.heading{
  text-align: center;
  padding-top: 4rem;
  font-weight: 300;
  font-size: 2rem;
}

.p-heading{
  font-weight: 500;
  font-size: 2rem;
  margin-bottom: 16px;
}

/* SERVICES SECTION START*/

#services{
  min-height: 100vh;
}

#services > div:nth-of-type(1){
  background-image: linear-gradient(to bottom right, #38EFCF, #0062AE);
  height: 25vh;
  padding-bottom: 16rem;
}

#services > div:nth-of-type(2){
  min-height: 50vh;
}

.service-container{
  width: 80%;
  box-shadow: 1px 3px 10px grey;
  background-color: white;
  border-radius: 30px;
  margin: -5rem auto 0px auto;
  display: flex;
}

.service{
  width: 33.333%;
  text-align: center;
  padding-bottom: 96px;
}

.service:nth-of-type(2){
  border-left: 1px solid #E8E8E8;
  border-right: 1px solid #E8E8E8;
}

.service img{
  width: 100px;
  height: 100px;
  padding-top: 40px;
  margin-bottom: 40px;
}

.service h2{
  margin-bottom: 40px;
}

.service p{
  width: 70%;
  margin: auto;
}

/* SERVICES SECTION END */

/* PORTFOLIO SECTION START */

#portfolio{
min-height: 100vh;
position: relative;
padding-bottom: 50px;
}

.portfolio-container{
  width: 100%;
  margin: 100px auto 0px auto;
  display: grid;
  grid-template-columns: repeat(3, 400px);
  grid-auto-rows: 350px;
  gap: 30px;
  justify-content: center;
}

.thumbnail{
  border-radius: 30px;
}

.portfolio-link{
  display: inline-block;
  width: 100%;
  height: 100%
}

.portfolio-link img{
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 30px;
}

.portfolio-link img.mjlonir{
  object-fit: contain;
}

.thumbnail:nth-of-type(2){
  background-color: black;
}

/* PORTFOLIO SECTION END */

/* ABOUT SECTION START */

#about{
min-height: 100vh;
background-image: linear-gradient(to bottom right,  #38EFCF, #0062AE);
padding-bottom: 8rem;
}

#about > p{
  color: white;
  padding-top: 50px;
  font-size: 1.3rem;
  text-align: center; 
  width: 70%;
  margin: 0px auto 0px auto;
}

.about-me-wrapper{
  width: 95%;
  display: flex;
  background-color: white;
  margin: 100px auto 0px auto;
  border-radius: 30px;
  box-shadow: 1px 3px 10px grey;
  position: relative;
}

.image-wrapper{
  width: 30%;
}

.image-wrapper > img{
  width: 100%;
  height: 100%;
  border-radius: 30px 0px 0px 30px;
  object-fit: cover;
  object-position: center;
}

.skills{
  width: 70%;
}

.skills-wrapper{
  width: 95%;
  margin: 0px auto 0px auto;
  padding-top: 20px;
  padding-bottom: 20px;
}

.skill{
  height: 50px;
}

.skill > p{
  font-weight: 500;
}

div > .skill+ .skill{
  margin-top: 8px;
}

.skill > div{
  background-color: #E1F2FF;
  height: 50%;
  border-radius: 30px;
}

.barfill{
  background-image: linear-gradient(to right, #0062AE,  #38EFCF);
  height: 100%;
  border-radius: 30px;
}

/* ABOUT SECTION END */

/* CONTACT SECTION */

#contact{
  min-height: 92vh;
}

.contact-container{
  margin: 0px auto 0px auto;
  height: 100%;
  width: 50%; 
}

form{
  height: 50%;
  margin-top: 80px;
}

form > div + div{
  margin-top: 16px;
}

.form-item{
  height: 50px;
}

input{
  height: 100%;
  width: 100%;
  border: none;
  background-color: #E1F2FF;
  font-family: inherit;
  font-size: 1.2rem;
  color: black;
  padding-left: 8px;
  outline: none;
}

.form-item-message{
  height: 300px
}

textarea{
  background-color: #E1F2FF;
  height: 100%;
  width: 100%;
  border: none;
  padding-left: 8px;
  padding-top: 8px;
  font-family: inherit;
  font-size: 1.2rem;
  outline: none;
}

.form-item-button{
  height: 100px;
  text-align: right;
}

button{
  background-color: white;
  border: 2px solid #38EFCF;
  height: 50%;
  width: 30%;
  font-family: inherit;
  border-radius: 40px;
  font-size: 1.4rem;
  font-weight: 500;
  cursor: pointer;
  outline: none;
}

footer{
  min-height: 8vh;
  width: 100%;
  background-color: #38EFCF;
  display: flex;
  justify-content: center;
  align-items: center;
}

::placeholder{
  color: black
}

footer div{
  border: 2px solid white;
  border-radius: 50%;
  padding: 10px;
  cursor: pointer;
  }
  
footer > div + div {
  margin-left: 20px;
}

footer i{
  font-size: 25px;
  color: white;
}

/* HOVER EFFECTS */

footer div:hover{
  background-color: white;
  transition: all 0.5s ease-out;
}

footer div:hover i{
  color: #38EFCF;
  transition: all 0.5s ease-out;
}

button:hover {
  background-color: #38EFCF;
  color: white;
  transition: all 0.5s ease-out;
}

button:focus{
  transform: scale(1,1);
  transition: all 0.5s ease-out;
}

/* END */

/* CONTACT SECTION END */
.portfolio-logo{
  height: 150px;
  width: 100%;
  margin: 150px 0px 50px 0px;
  text-align: center;
}

.portfolio-logo img{
  width: 150px;
}

.portfolio-banner{
  width: 100%;
  text-align: center;
  margin-bottom: 20px;
}

.portfolio-banner img{
  width: 100%;
  object-fit: cover;
}

 .portfolio-content{
  width: 50%;
  margin-right: auto;
  margin-left: auto;
}

.description{
  margin-bottom: 40px;
}

.description a{
  color: blue;
  text-decoration: underline;
}

.description-image{
 width: 100%;
 margin-bottom: 25px;
}

.description-image img{
  width: 100%;
}

@media only screen and (max-width: 1300px){
  .portfolio-container{
    grid-template-columns: repeat(2, 400px);
  }
}

@media only screen and (max-width: 990px){

  .service-container{
    flex-direction: column;
  }

  .service-container > div{
    width: 100%;
    height: 33.333%;
  }

  .service-container > div:nth-of-type(2){
    border: none;
    border-top: 1px solid #E8E8E8;
    border-bottom: 1px solid #E8E8E8;
  }

  .about-me-wrapper{
    display: block;
    width: 90%;
  }

  .image-wrapper{
    width: 100%;
    height: 300px;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .image-wrapper > img{
    height: 150px;
    width: 150px;
    border-radius: 50%;
  }

  .skills{
    width: 100%;
  }
}

@media only screen and (max-width: 870px){
  .portfolio-container{
    grid-template-columns: repeat(1, 400px);
  }

  .contact-container{
    width: 80%;
    }

  button{
    width: 50%;
  }

  .portfolio-content{
    width: 90%;
  }

  .slogan > p{
    font-size: 2.3rem;
  }
}

@media only screen and (max-width: 600px){
  .slogan > p{
    font-size: 1.5rem;
  }
}

@media only screen and (max-width: 500px){
  .portfolio-container{
    display: block;
    width: 90%;
  }

  .thumbnail{
    width: 200px;
    height: 200px;
    margin: auto;
  }

  .thumbnail + .thumbnail{
    margin-top: 32px;
  }
}

@media only screen and (max-width: 400px){
  .slogan > p{
    font-size: 1rem;
  }
}

